Work packages / Geographic scope: horizontal scroll in tab was corrected

--- a/one-cgiar-front/src/app/shared/components/concept/work-package/work-package.component.scss
+++ b/one-cgiar-front/src/app/shared/components/concept/work-package/work-package.component.scss
@@ -162,3 +162,6 @@ table, th, td {
     width: 100%;
  //    height: 400px;
  }
+.horizontal_padding{
+    padding: 0px 20px;
+}
